<resources>
    <string name="app_name">chEasy Taxi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nombre">Nombre:</string>


    <string name="acerca">ACERCA DE</string>
    <string name="tema">Tema</string>
    <string name="registro">REGISTRARSE</string>
    <string name="taxi">PEDIR UN TAXI</string>
    <string name="nombre_input">Usuario</string>
    <string name="contrasena_input">Constraseña</string>
    <string name="sesion">INICIAR SESIÓN</string>
    <string name="title_activity_acerca">chEasy Taxi</string>
    <string name="title_activity_registro">chEasy Taxi</string>
    <string name="title_activity_map">Usando Reconocimiento de Voz</string>
    <string name="selecciona_una_opcion">Información de la Aplicación</string>


    <string name="nombreApp">Nombre de la Aplicación</string>
    <string name="nombreApp2">chEasy Taxi</string>
    <string name="desarrollador">Desarrollador:</string>
    <string name="desarrollador2">Guillermo Chessani</string>
    <string name="version">Versión</string>
    <string name="version2">1.0.0</string>
    <string name="fecha">Fecha:</string>
    <string name="fecha2">19/09/2015</string>
    <string name="sistemaoperativo">Sistema Operativo:</string>
    <string name="sistemaoperativo2">Android 4.4.2</string>
    <string name="ide">IDE Utilizado:</string>
    <string name="ide2">Android Studio 1.3.2</string>
    <string name="api">API Utilizada</string>
    <string name="api2">API 19</string>
    <string name="title_activity_acerca_de">chEasy Taxi</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_mapas">Map</string>
    <string name="title_activity_perfilde_usuario">Mi Perfil</string>
    <string name="title_activity_mi_perfil">Mi Perfil</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menup">Menup</string>
    <string name="title_activity_mconfirmacion">Map</string>
    <string name="title_activity_practicas">Prácticas</string>
    <string name="title_activity_touch">Usando Touch</string>
    <string name="title_activity_sensores">Usando Sensores</string>
    <string name="title_activity_proximidad">Usando Proximidad</string>
    <string name="title_activity_alarma">Usando Alarma</string>
    <string name="title_activity_calificacion">chEasy Taxi</string>
    <string name="title_activity_plot">Usando Android Plot</string>
    <string name="title_activity_grafica">Usando Graficas</string>
    <string name="title_activity_server">Server</string>
    <string name="title_activity_client">Client</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="title_activity_servidor">Servidor</string>
    <string name="title_activity_tabs">Usando Tabs</string>
    <string name="title_activity_fragments">Usando Fragments</string>
    <string name="title_activity_gridview">Usando Gridview</string>
    <string name="title_activity_listview">Usando Listview</string>
    <string name="title_activity_viaje">Califica al Operador</string>
    <string name="title_activity_calificar">Calificar</string>
    <string name="title_activity_graficas">Graficas</string>
    <string name="title_activity_pie_chart">PieChart</string>
    <string name="title_activity_dynamic_chart">DynamicChart</string>
    <string name="title_activity_grafica_pastel">GraficaPastel</string>



</resources>
