<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/layout"

    tools:context="com.example.usuario.cheasytaxi.Acerca">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/switch1"
            android:layout_gravity="right"
            android:checked="true" />

              <TextView android:id="@+id/LblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView android:id="@+id/LblSubTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="12sp" />


        <TextView
            android:layout_width="342dp"
            android:layout_height="40dp"
            android:text="@string/selecciona_una_opcion"
            android:textStyle="bold"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:id="@+id/list_header" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreApp"
            android:textSize="20sp"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreApp2"
            android:textSize="12sp"
            android:id="@+id/textView2" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desarrollador"
            android:textSize="20sp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desarrollador2"
            android:textSize="12sp"
            android:id="@+id/textView4" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="20sp"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version2"
            android:textSize="12sp"
            android:id="@+id/textView6" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistemaoperativo"
            android:textSize="20sp"
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistemaoperativo2"
            android:textSize="12sp"
            android:id="@+id/textView8" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="20sp"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha2"
            android:textSize="12sp"
            android:id="@+id/textView10" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ide"
            android:textSize="20sp"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ide2"
            android:textSize="12sp"
            android:id="@+id/textView12" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api"
            android:textSize="20sp"
            android:id="@+id/textView13" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api2"
            android:textSize="12sp"
            android:id="@+id/textView14" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C8C9CB"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MENÚ DE PRÁCTICAS"
        android:id="@+id/btnMenu"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
